deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-angular-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-angular-app-deployment
  template:
    metadata:
      labels:
        app: simple-angular-app-deployment
    spec:
      containers:
        - name: simple-angular-app-deployment
          image: sonyne/simple-app:v1.0.0 # 👈 Your Docker Hub image
          ports:
            - containerPort: 80
