jfrog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: angular-app-deployment
  template:
    metadata:
      labels:
        app: angular-app-deployment
    spec:
      containers:
        - name: angular-app-deployment
          image: trialdyboak.jfrog.io/kube-learn-docker/jfrog-docker-example-image:5 # 👈 Your Docker Hub image
          ports:
            - containerPort: 80
