simple-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-app-service
spec:
  selector:
    app: simple-angular-app-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort  # Or ClusterIp if you're running locally (e.g. Minikube)
  # If you're using a cloud provider, you might want to use LoadBalancer
  # type: LoadBalancer
