ingress-fe.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-ingress
  namespace: kube
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: kube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-frontend-service
                port:
                  number: 80
