ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-ingress
  namespace: kube
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      try_files $uri $uri/ /index.html;
spec:
  ingressClassName: nginx
  rules:
    - host: kube.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: express-api-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-frontend-service
                port:
                  number: 80
