sec-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sec-kube-ingress
  namespace: kube
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: seckube.local
      http:
        paths:
          # Rewrite only applies here
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: express-api-service
                port:
                  number: 80

          # No rewrite here – static files for Angular
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-frontend-service
                port:
                  number: 80
