third-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: t-kube-ingress
  namespace: kube
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: tkube.local
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: express-api-service
            port:
              number: 80
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: angular-frontend-service
            port:
              number: 80
